// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompressionPlugin should run plugin against assets added later by plugins: assets 1`] = `
[
  [
    "main.js",
    1843,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 1843,
    },
  ],
  [
    "main.js.gz",
    584,
    {
      "compressed": true,
      "size": 584,
    },
  ],
  [
    "newFile.js",
    23,
    {
      "related": {
        "gzipped": "newFile.js.gz",
      },
      "size": 23,
    },
  ],
  [
    "newFile.js.gz",
    43,
    {
      "compressed": true,
      "size": 43,
    },
  ],
]
`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: errors 1`] = `[]`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 1`] = `
[
  [
    "async.async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "icon.png",
    78117,
    {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    393,
    {
      "compressed": true,
      "size": 393,
    },
  ],
  [
    "main.js",
    15948,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 15948,
    },
  ],
  [
    "main.js.gz",
    3915,
    {
      "compressed": true,
      "size": 3915,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 2`] = `
[
  [
    "async.async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "icon.png",
    78117,
    {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    393,
    {
      "compressed": true,
      "size": 393,
    },
  ],
  [
    "main.js",
    15948,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 15948,
    },
  ],
  [
    "main.js.gz",
    3915,
    {
      "compressed": true,
      "size": 3915,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 1`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 2`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 1`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 2`] = `[]`;

exports[`CompressionPlugin should work and keep assets info: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.cd3aed5809a2faa4eb5a.js",
    194,
    {
      "contenthash": "cd3aed5809a2faa4eb5a",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.cd3aed5809a2faa4eb5a.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.cd3aed5809a2faa4eb5a.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "main.c1f4ab4293f322adc447.js",
    16035,
    {
      "contenthash": "c1f4ab4293f322adc447",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.c1f4ab4293f322adc447.js.gz",
      },
      "size": 16035,
    },
  ],
  [
    "main.c1f4ab4293f322adc447.js.gz",
    3999,
    {
      "compressed": true,
      "immutable": true,
      "size": 3999,
    },
  ],
]
`;

exports[`CompressionPlugin should work and keep assets info: errors 1`] = `[]`;

exports[`CompressionPlugin should work and keep assets info: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and show compress assets in stats: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "main.js",
    16004,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16004,
    },
  ],
  [
    "main.js.gz",
    3979,
    {
      "compressed": true,
      "size": 3979,
    },
  ],
]
`;

exports[`CompressionPlugin should work and show compress assets in stats: errors 1`] = `[]`;

exports[`CompressionPlugin should work and show compress assets in stats: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: assets 1`] = `
[
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "icon.png",
    78117,
    {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    393,
    {
      "compressed": true,
      "size": 393,
    },
  ],
  [
    "main.js",
    15932,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 15932,
    },
  ],
  [
    "main.js.gz",
    3912,
    {
      "compressed": true,
      "size": 3912,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: assets 2`] = `
[
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "icon.png",
    94117,
    {
      "related": {
        "gzipped": "icon.png.gz",
      },
      "size": 94117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.png.gz",
    73309,
    {
      "compressed": true,
      "size": 73309,
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    393,
    {
      "compressed": true,
      "size": 393,
    },
  ],
  [
    "main.js",
    15932,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 15932,
    },
  ],
  [
    "main.js.gz",
    3912,
    {
      "compressed": true,
      "size": 3912,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "main.js",
    15988,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 15988,
    },
  ],
  [
    "main.js.gz",
    3976,
    {
      "compressed": true,
      "size": 3976,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "main.js",
    16025,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16025,
    },
  ],
  [
    "main.js.gz",
    4000,
    {
      "compressed": true,
      "size": 4000,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.js.br",
        "customed": "async.js.custom",
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.br",
    123,
    {
      "compressed": true,
      "size": 123,
    },
  ],
  [
    "async.js.custom",
    194,
    {
      "compressed": true,
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "main.js",
    15988,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 15988,
    },
  ],
  [
    "main.js.br",
    3476,
    {
      "compressed": true,
      "size": 3476,
    },
  ],
  [
    "main.js.custom",
    15988,
    {
      "compressed": true,
      "size": 15988,
    },
  ],
  [
    "main.js.gz",
    3976,
    {
      "compressed": true,
      "size": 3976,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.js.br",
        "customed": "async.js.custom",
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.br",
    123,
    {
      "compressed": true,
      "size": 123,
    },
  ],
  [
    "async.js.custom",
    194,
    {
      "compressed": true,
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "main.js",
    15988,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 15988,
    },
  ],
  [
    "main.js.br",
    3476,
    {
      "compressed": true,
      "size": 3476,
    },
  ],
  [
    "main.js.custom",
    15988,
    {
      "compressed": true,
      "size": 15988,
    },
  ],
  [
    "main.js.gz",
    3976,
    {
      "compressed": true,
      "size": 3976,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "main.js",
    15988,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 15988,
    },
  ],
  [
    "main.js.gz",
    3976,
    {
      "compressed": true,
      "size": 3976,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "main.js",
    15988,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 15988,
    },
  ],
  [
    "main.js.gz",
    3976,
    {
      "compressed": true,
      "size": 3976,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "main.7ec9076a30af0f4e444d.js",
    16035,
    {
      "chunkhash": "7ec9076a30af0f4e444d",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.7ec9076a30af0f4e444d.js.gz",
      },
      "size": 16035,
    },
  ],
  [
    "main.7ec9076a30af0f4e444d.js.gz",
    4001,
    {
      "compressed": true,
      "immutable": true,
      "size": 4001,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "main.7ec9076a30af0f4e444d.js",
    16035,
    {
      "chunkhash": "7ec9076a30af0f4e444d",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.7ec9076a30af0f4e444d.js.gz",
      },
      "size": 16035,
    },
  ],
  [
    "main.7ec9076a30af0f4e444d.js.gz",
    4001,
    {
      "compressed": true,
      "immutable": true,
      "size": 4001,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 2`] = `[]`;

exports[`CompressionPlugin should work child compilations: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "async.async.js?ver=113fc4c94a1f7bc3c8c0",
    194,
    {
      "fullhash": "113fc4c94a1f7bc3c8c0",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "copied.js",
    400,
    {
      "copied": true,
      "related": {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  [
    "copied.js.gz",
    29,
    {
      "compressed": true,
      "size": 29,
    },
  ],
  [
    "main.js.gz",
    4024,
    {
      "compressed": true,
      "immutable": true,
      "size": 4024,
    },
  ],
  [
    "main.js?var=113fc4c94a1f7bc3c8c0",
    16193,
    {
      "fullhash": "113fc4c94a1f7bc3c8c0",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16193,
    },
  ],
]
`;

exports[`CompressionPlugin should work child compilations: errors 1`] = `[]`;

exports[`CompressionPlugin should work child compilations: warnings 1`] = `[]`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "main.7ec9076a30af0f4e444d.js",
    16035,
    {
      "chunkhash": "7ec9076a30af0f4e444d",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.7ec9076a30af0f4e444d.js.gz",
      },
      "size": 16035,
    },
  ],
  [
    "main.7ec9076a30af0f4e444d.js.gz",
    4001,
    {
      "compressed": true,
      "immutable": true,
      "size": 4001,
    },
  ],
  [
    "stats.json",
    155,
    {
      "size": 155,
    },
  ],
]
`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': errors 1`] = `[]`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': warnings 1`] = `[]`;

exports[`CompressionPlugin should work with assets info: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "async.async.js?ver=7e5330c00888910ba615",
    194,
    {
      "fullhash": "7e5330c00888910ba615",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "copied.js",
    400,
    {
      "copied": true,
      "related": {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  [
    "copied.js.gz",
    29,
    {
      "compressed": true,
      "size": 29,
    },
  ],
  [
    "main.js.gz",
    4059,
    {
      "compressed": true,
      "immutable": true,
      "size": 4059,
    },
  ],
  [
    "main.js.map.gz",
    4137,
    {
      "compressed": true,
      "size": 4137,
    },
  ],
  [
    "main.js.map?var=7e5330c00888910ba615",
    13167,
    {
      "development": true,
      "related": {
        "gzipped": "main.js.map.gz",
      },
      "size": 13167,
    },
  ],
  [
    "main.js?var=7e5330c00888910ba615",
    16254,
    {
      "fullhash": "7e5330c00888910ba615",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
        "sourceMap": "main.js.map?var=7e5330c00888910ba615",
      },
      "size": 16254,
    },
  ],
]
`;

exports[`CompressionPlugin should work with assets info: errors 1`] = `[]`;

exports[`CompressionPlugin should work with assets info: warnings 1`] = `[]`;

exports[`CompressionPlugin should work with multiple plugins: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "compressed": "09a1a1112c577c2794359715edfcb5ac.png.compress",
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.compress",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "compressed": "23fc1d3ac606d117e05a140e0de79806.svg.compress",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.compress",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.js.br",
    123,
    {
      "compressed": true,
      "immutable": true,
      "size": 123,
    },
  ],
  [
    "async.async.js.compress",
    194,
    {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  [
    "async.async.js.custom?foo=bar#hash",
    194,
    {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "async.async.js?ver=952d22f0ea77a7b0ae56",
    194,
    {
      "fullhash": "952d22f0ea77a7b0ae56",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.async.js.br",
        "compressed": "async.async.js.compress",
        "customed": "async.async.js.custom?foo=bar#hash",
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.br",
    3540,
    {
      "compressed": true,
      "immutable": true,
      "size": 3540,
    },
  ],
  [
    "main.js.compress",
    16196,
    {
      "compressed": true,
      "immutable": true,
      "size": 16196,
    },
  ],
  [
    "main.js.custom?foo=bar#hash",
    16196,
    {
      "compressed": true,
      "immutable": true,
      "size": 16196,
    },
  ],
  [
    "main.js.gz",
    4028,
    {
      "compressed": true,
      "immutable": true,
      "size": 4028,
    },
  ],
  [
    "main.js?var=952d22f0ea77a7b0ae56",
    16196,
    {
      "fullhash": "952d22f0ea77a7b0ae56",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.js.br",
        "compressed": "main.js.compress",
        "customed": "main.js.custom?foo=bar#hash",
        "gzipped": "main.js.gz",
      },
      "size": 16196,
    },
  ],
]
`;

exports[`CompressionPlugin should work with multiple plugins: errors 1`] = `[]`;

exports[`CompressionPlugin should work with multiple plugins: warnings 1`] = `[]`;

exports[`CompressionPlugin should work: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "async.async.js?ver=952d22f0ea77a7b0ae56",
    194,
    {
      "fullhash": "952d22f0ea77a7b0ae56",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz",
    4028,
    {
      "compressed": true,
      "immutable": true,
      "size": 4028,
    },
  ],
  [
    "main.js?var=952d22f0ea77a7b0ae56",
    16196,
    {
      "fullhash": "952d22f0ea77a7b0ae56",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16196,
    },
  ],
]
`;

exports[`CompressionPlugin should work: errors 1`] = `[]`;

exports[`CompressionPlugin should work: warnings 1`] = `[]`;
